--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "chart.js": "^4.4.3",
+    "chartjs-chart-error-bars": "^4.4.0",
     "framer-motion": "^11.2.6",
     "next": "14.2.3",
     "react": "^18",
