--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["asari", "Chakra", "chartjs", "hoko", "yagura"]
+  "cSpell.words": ["asari", "Chakra", "chartjs", "hoko", "splatoon", "yagura"]
 }
